correção no Unity of Work

--- a/RGB.curso.WebPedidos/RGB.curso.WebPedidos.csproj
+++ b/RGB.curso.WebPedidos/RGB.curso.WebPedidos.csproj
@@ -163,6 +163,7 @@
     <Compile Include="App_Start\SimpleInjectorInitializer.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
+    <Compile Include="Controllers\FornecedorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -218,6 +219,9 @@
     <Content Include="Views\Cliente\_FormCliente.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Cliente\Alterar.cshtml" />
+    <Content Include="Views\Fornecedor\Index.cshtml" />
+    <Content Include="Views\Fornecedor\Incluir.cshtml" />
+    <Content Include="Views\Fornecedor\_FormFornecedor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
