--- a/RGB.curso.WebPedidos/Web.config
+++ b/RGB.curso.WebPedidos/Web.config
@@ -8,7 +8,7 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
   <connectionStrings>
-    <add name="ConPedidos" connectionString="server=RGB4\RGB2014;uid=usrwinfact;database=CURSO_LEONARDO;pwd=1000;" providerName="System.Data.SqlClient" />
+    <add name="ConPedidos" connectionString="conextarstring" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
